--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,27 @@ body {
 h1, h2, h3, h4, h5 {
   font-weight: bold;
   line-height: 1.1;
+  margin: 1em 0 .5em;
+}
+
+h1 {
+  padding: 1em 0;
+  margin: 0;
+  text-align: center;
+  font-size: 250%;
+}
+
+h2 {
+  font-size: 175%;
+  padding: .5em 0;
+  margin: 0;
+}
+
+h3 {
+  font-size: 150%;
+}
+h4 {
+  font-size: 125%;
 }
 
 pre.sourceCode {
@@ -49,22 +70,17 @@ hr {
   margin: 50px 0;
 }
 
-h1 {
-  margin: 0 0 .5em 0;
+.document-title {
+  text-transform: uppercase;
+  font-size: 200%;
   text-align: center;
-  font-size: 250%;
+  padding-bottom: 0;
 }
-h2 {
+.document-version {
   font-size: 150%;
-  margin: .5em 0;
-}
-
-h4 {
-  border-bottom: 1px solid #ccc;
-  margin-top: 40px;
-  margin-bottom: 20px;
-  font-weight: bold;
-  width: 400px;
+  color: #666;
+  text-align: center;
+  margin-top: 0;
 }
 
 .author {
@@ -81,12 +97,15 @@ img {
   overflow-x: hidden;
 }
 
-a {
+a:link {
   color: #4070a0;
   text-decoration: none;
 }
 a:hover {
   text-decoration: underline;
+}
+a:active {
+  color: #205080;
 }
 
 /* Body Links */
@@ -128,7 +147,30 @@ tr:nth-child(even) td{
     background:#f7f7f7;
 }
 
-/*  */
+/* Provide an overflowing container for the wide table */
+.overflow-table {
+  width: 100%;
+  margin: 20px 0;
+  overflow-x: auto;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+}
+.overflow-table table {
+  margin: 0;
+}
+/* Join the table borders with the .overflow-table div borders */
+.overflow-table tr td:first-child,
+.overflow-table tr th:first-child {
+  border-left: none;
+}
+.overflow-table tr td:last-child,
+.overflow-table tr th:last-child {
+  border-right: none;
+}
+/* Hide the stray paragraph tag generated by the build */
+.overflow-table > p {
+  display: none;
+}
 
 .center {
     text-align: center;
